# ShowdownRL

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx
dashboard/src/components/: BattleReplayViewer.jsx  CommonMisplay.jsx  MatchupWinRates.jsx  PolicyComparison.jsx  WinRateOverTime.jsx
dashboard/src/data/: loader.js
docs/: ai_stats.md  model_leaderboard.md
docs/benchmarks/: current_evaluation.csv  model_leaderboard.csv
docs/blog/: showdownrl-technical-deep-dive.md
models/: maskable_ppo_v11_conservative_3M.metadata.json
scripts/: evaluate_model.py  generate_ai_stats.py  live_browser_battle.py  plot_results.py  regenerate_benchmarks.py  run_experiments.py  smoke_test.py  train_ppo.py
showdownrl/: __init__.py  ai.py  cli.py  config.py  live.py  policies.py  policy_bridge.py  simple_env.py  stats.py
tests/: test_ai.py  test_benchmarks.py  test_live.py  test_policy_bridge.py  test_run_experiments.py  test_simple_env.py  test_stats.py  test_train_ppo.py
