[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "showdownrl"
version = "0.1.0"
description = "Watch an AI play Pokemon Showdown in a visible browser."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "ShowdownRL contributors"},
]
dependencies = [
  "playwright>=1.45",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
rl = [
  "gymnasium",
  "matplotlib",
  "numpy",
  "pandas",
  "poke-env",
  "stable-baselines3",
  "torch",
]

[project.scripts]
showdownrl = "showdownrl.cli:main"

[tool.setuptools]
packages = ["showdownrl"]
