[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "showdownrl"
version = "0.1.0"
description = "Watch an AI play Pokemon Showdown in a visible browser."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "ShowdownRL contributors"},
]
dependencies = [
  "playwright>=1.45",
  "platformdirs>=4.0",
]
license = {text = "MIT"}
keywords = ["pokemon", "showdown", "reinforcement-learning", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
rl = [
  "gymnasium",
  "matplotlib",
  "numpy",
  "pandas",
  "poke-env",
  "sb3-contrib",
  "stable-baselines3",
  "torch",
]

[project.scripts]
showdownrl = "showdownrl.cli:main"

[tool.setuptools]
packages = ["showdownrl"]

[tool.setuptools.data-files]
models = [
  "models/ppo_move_selection_v2_typed.zip",
  "models/ppo_move_selection_v3_rich.zip",
  "models/ppo_move_selection_v4_rich.zip",
  "models/ppo_move_selection_v5_rich_finetuned.zip",
  "models/maskable_ppo_move_selection_v6_rich.zip",
]
